--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,30 @@
-/* You can add global styles to this file, and also import other style files */
-@import './sass/base/base';
+/* archivo principal */
+
+@import "./sass/abstracts/variables";
+
+@import "./sass/base/animations";
+@import "./sass/base/base";
+@import "./sass/base/typography";
+@import "./sass/base/utilities";
+
+@import "./sass/components/button";
+@import "./sass/components/bg-video";
+
+@import "./sass/components/card";
+
+@import "./sass/components/composition";
+
+@import "./sass/components/feature-box";
+@import "./sass/components/form";
+
+@import "./sass/components/story";
+
+@import "./sass/layout/footer";
+@import "./sass/layout/grid";
+@import "./sass/layout/header";
+@import "./sass/layout/navigation";
+
+@import "./sass/pages/home";
+
+
+
