--- a/src/app/pages/section-stories/section-stories.component.html
+++ b/src/app/pages/section-stories/section-stories.component.html
@@ -4,8 +4,8 @@
     <div class="bg-video">
         <div class="bg-video">
             <video class="bg-video__content" autoplay muted loop>
-                <source src="img/Perfect_Hour.mp4" type="video/mp4">
-                <source src="img/Perfect_Hour.webm" type="video/webm">
+                <source src="../../../assets/Perfect_Hour.mp4" type="video/mp4">
+                <source src="../../../assets/Perfect_Hour.webm" type="video/webm">
                 Your browser is not supported!
             </video>
         </div>
@@ -20,7 +20,7 @@
     <div class="row">
             <div class="story">
                     <figure class="story__shape">
-                        <img src="img/nat-8.jpg" alt="Persona de tour" class="story__img">
+                        <img src="../../../assets/nat-8.jpg" alt="Persona de tour" class="story__img">
                         <figcaption class="story__caption">
                             Mary Smith
                         </figcaption>
@@ -35,11 +35,10 @@
                     </div>
                 </div>
     </div>
-
     <div class="row">
         <div class="story">
                 <figure class="story__shape">
-                    <img src="img/nat-9.jpg" alt="Persona de tour" class="story__img">
+                    <img src="../../../assets/nat-9.jpg" alt="Persona de tour" class="story__img">
                     <figcaption class="story__caption">
                         Jack Wilson
                     </figcaption>
