--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -7,8 +7,8 @@
       margin-bottom: $gutter-vertical;
     }
   
-  
-    // @include clearfix;
+    @import "../abstracts/mixins";
+    @include clearfix;
   
     [class^="col-"] {
      // background-color: orangered;
