CSC 2018/09/27: Sección de popup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,5 @@
   <app-section-stories></app-section-stories>
   <app-section-book></app-section-book>
   <app-footer></app-footer>
+  <app-popup></app-popup>
 </main>
