--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,8 @@
 @import "./sass/components/feature-box";
 @import "./sass/components/form";
 
+@import "./sass/components/popup";
+
 @import "./sass/components/story";
 
 @import "./sass/layout/footer";
