--- a/src/app/pages/section-tours/section-tours.component.html
+++ b/src/app/pages/section-tours/section-tours.component.html
@@ -1,4 +1,4 @@
-<section class="section-tours">
+<section class="section-tours" id="section-tours">
     <div class="u-center-text u-margin-bottom-big">
         <h2 class="heading-secondary">
             Tours mas populares
@@ -37,7 +37,7 @@
                                   <p class="card__price-value">
                                       $298
                                   </p>
-                                  <a href="" class="btn btn--white">Compra aquí</a>
+                                  <a href="#popup" class="btn btn--white">Compra aquí</a>
                              </div>
                          </div>
                     </div>
@@ -69,13 +69,13 @@
                      <div class="card__side card__side--back card__side--back-2">
                          <div class="card__cta">
                              <div class="card__price-box">
-                                  <p class="card__price-only">
+                                <p class="card__price-only">
                                     A solo
                                   </p>
                                   <p class="card__price-value">
-                                         A solo
+                                      $298
                                   </p>
-                                  <a href="" class="btn btn--white">Compra aquí</a>
+                                  <a href="#popup" class="btn btn--white">Compra aquí</a>
                              </div>
                          </div>
                     </div>
@@ -113,7 +113,7 @@
                                   <p class="card__price-value">
                                       $298
                                   </p>
-                                  <a href="" class="btn btn--white">Compra aquí</a>
+                                  <a href="#popup" class="btn btn--white">Compra aquí</a>
                              </div>
                          </div>
                     </div>
